# find_friend

./: .env  .env.example  README.md  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  activity.py  chat.py  match.py  user.py
app/core/: config.py
app/models/: __init__.py  chat.py  user.py
app/schemas/: activity.py  chat.py  match.py  user.py
app/services/: chat_service.py  user_service.py
dazi_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dazi_app_backend/app/: main.py
dazi_app_backend/app/api/v1/: router.py
dazi_app_backend/app/api/v1/endpoints/: chat.py  match.py  user.py
dazi_app_backend/app/models/: activity.py
dazi_app_backend/app/schemas/: __init__.py  activity.py  chat.py  match.py  user.py
dazi_app_backend/app/services/: __init__.py  activity_service.py  match_service.py
dazi_app_frontend/: index.html  package.json  pnpm-lock.yaml
dazi_app_frontend/src/: App.vue  style.css
dazi_app_frontend/src/api/: client.ts
dazi_app_frontend/src/router/: index.ts
dazi_app_frontend/src/views/: ActivityView.vue  ChatView.vue  MatchView.vue  UserView.vue
tests/: test_health.py
